# ain-soph

./: README.textile  notes.markdown
binah/: .gitignore  Application.hs  Foundation.hs  Import.hs  LICENSE  README.textile  Settings.hs  binah.cabal  devel.hs  main.hs
binah/Handler/: Root.hs
binah/config/: client_session_key.aes  settings.yml  sqlite.yml
binah/deploy/: Procfile
binah/templates/: default-layout-wrapper.hamlet
malkut/: LICENSE  Malkut.hs  README.markdown  README.textile  malkut.cabal
